--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,11 @@
-$color-primary: #ddd;
+// $color-primary: #ddd;
 $color-dark: #333;
-$color-light: #fff;
+$color-light: #f8f9fa;
+$color-white: #fff;
+$color-primary: #007bff;
+$color-secondary: #6c757d;
+$color-success: #28a745;
+$color-info: #17a2b8;
+$color-warning: #ffc107;
+$color-danger: #dc3545;
 $shadow-default: 0 1px 5px rgba(104, 104, 104, 0.8);
