191012 add nav-menu onclick behaviour, add cover img

--- a/src/style/_color.scss
+++ b/src/style/_color.scss
@@ -1,5 +1,5 @@
 $color-dark: #333;
-$color-light: #fbfdff;
+$color-light: #fbfbfb;
 $color-white: #fff;
 $color-primary: #007bff;
 $color-secondary: #6c757d;
