191021 edit content of view_epaper and view_about

--- a/src/style/_color.scss
+++ b/src/style/_color.scss
@@ -7,3 +7,7 @@ $color-success: #28a745;
 $color-info: #17a2b8;
 $color-warning: #ffc107;
 $color-danger: #dc3545;
+
+@mixin font-color($color) {
+  color: $color;
+}
