--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -1,4 +1,3 @@
-
 @mixin for-desktop() {
   @media screen and (min-width: map-get($breakpoints, 'desktop')) {
     @content;
@@ -40,5 +39,61 @@
   }
   &::before {
     top: $spacing * -1;
+  }
+}
+
+@mixin tag-group() {
+  $area_line-height: 1.2rem;
+  display: flex;
+  flex-flow: row wrap;
+  > a {
+    position: relative;
+    cursor: pointer;
+    z-index: 0;
+    font-size: 0.8rem;
+    font-weight: bold;
+    line-height: $area_line-height;
+    height: $area_line-height;
+    overflow: hidden;
+    margin: 0.5rem 0.5rem 0 0;
+    padding: 0 6px;
+    text-decoration: none;
+    letter-spacing: 1px;
+    color: $color-dark;
+    &::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: rgb(219, 219, 219);
+      z-index: -1;
+    }
+    &::after {
+      content: '';
+      width: 0;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: darken($color-primary, 10);
+      z-index: -1;
+    }
+  }
+  @include for-desktop {
+    height: ($area_line-height + 0.5rem) * 2;
+    > a:hover {
+      color: white;
+      transition: all 0s ease 0.1s;
+      &::before {
+        width: 0;
+        transition: 0.3s;
+      }
+      &::after {
+        width: 100%;
+        transition: 0.3s 0.3s;
+      }
+    }
   }
 }
